changed app names and added packages

--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "mongoose": "^8.16.4",
+    "next-auth": "^4.24.11"
+  }
 }
