--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "packages/*"
   ],
   "dependencies": {
-    "mongoose": "^8.16.4"
+    "@types/next-auth": "^3.13.0",
+    "mongoose": "^8.16.4",
+    "next-auth": "^4.24.11"
   }
 }
