--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -3,10 +3,13 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./*": ["./src/*.tsx", "./src/*.ts"]
+    "./*": [
+      "./src/*.tsx",
+      "./src/*.ts"
+    ]
   },
   "dependencies": {
-    "next-auth": "^4.24.11"
+    "@repo/db": "*"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
