--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -4,8 +4,8 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "./tailwind.config.ts",
-    "css": "src/styles/globals.css",
+    "config": "tailwind.config.ts",
+    "css": "src/globals.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
